# pigsudoku

./: .gitmodules  Cargo.toml  Dioxus.toml  README.md
.github/templates/: .nojekyll  _headers
.github/workflows/: deploy.yml
assets/: main.css
locales/: en-US.ftl  zh-CN.ftl
src/: backend.rs  frontend.rs  game_logic.rs  main.rs
