[package]
name = "pigsudoku"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = [] }
dioxus-i18n = "0.4.3"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
